--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "gatsby": "^2.16.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
