--- a/package.json
+++ b/package.json
@@ -14,9 +14,19 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.17.4",
+    "gatsby-image": "^2.2.29",
+    "gatsby-plugin-manifest": "^2.2.23",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sharp": "^2.2.32",
+    "gatsby-source-contentful": "^2.1.50",
+    "gatsby-source-filesystem": "^2.1.33",
+    "gatsby-transformer-json": "^2.2.15",
+    "gatsby-transformer-sharp": "^2.3.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "uninstall": "0.0.0"
   },
